Refactor SecurityConfig to use constructor injection